2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.pl (LoadFont): Revise error message
	when a font can't be found for embedding.  User failure to add
	an entry for locating the font file seems a more likely scenario
	than outright corruption of the file.

2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp (font_change): Warn upon selection of a
	nonexistent font name.

	Fixes <https://savannah.gnu.org/bugs/?62656>.

2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Revise `environment::set_font` to return Boolean value
	indicating success of font selection operation.

	* src/roff/troff/env.cpp (environment::set_font):
	* src/roff/troff/env.h (environment::set_font): Do it.

	This prepares the way for a fix for Savannah #62656.

2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp: Use single exit path, freeing
	memory allocated for strings.
	(xexit): Add `exit()` wrapper; free allocated memory.
	(main): Use it in all three exit paths.

2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp: Refactor to be more meticulous with
	memory.  Add globals `saved_path`, `groff_bin_path`, and
	`groff_font` to store pointers into the process environment
	returned by `putenv()`; once used, they need to remain valid for
	the lifetime of the program.
	(xstrdup): Add `strdup()` wrapper: dies if `strdup()` fails.
	(main): Split nested `strsave()` and `xputenv()` (until recently
	`putenv()`) calls.  Free duplicate strings prior to exit.

2022-06-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp (main): Rename temporary variable to
	avoid shadowing one in enclosing scope, which can lead to
	cut-and-paste errors (ask me how I know).

2022-06-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp: Slightly refactor to indirect