@@ -1190,15 +1190,15 @@ static symbol P_symbol("P");
 void font_change()
 {
   symbol s = get_name();
-  int is_number = 1;
+  bool is_number = true;
   if (s.is_null() || s == P_symbol) {
     s = P_symbol;
-    is_number = 0;
+    is_number = false;
   }
   else {
     for (const char *p = s.contents(); p != 0 && *p != 0; p++)
       if (!csdigit(*p)) {
-	is_number = 0;
+	is_number = false;
 	break;
       }
   }
